--- a/site_v5.yml
+++ b/site_v5.yml
@@ -102,7 +102,7 @@
       home: "{{ install_base }}/jetty/jetty-home-{{ download.jetty.version }}"
       base: "{{ install_base }}/shibboleth/jetty11"
       current: "{{ install_base }}/jetty/current"
-      tmp_directory: "{{ jetty.base }}/tmp"
+      tmp_directory: "{{ install_base }}/shibboleth/jetty11/tmp"
       state_directory: "{{ install_base }}/shibboleth/jetty11/tmp"
       web_443_keystore_pw: "{{ lookup('password', installer.repository + '/passwords/' + inventory_hostname + '/web_443_keystore chars=letters,digits length=64') }}"
     shib_idp:
