Fixed var name, dash to underscore :

--- a/templates/jetty/start.d/idp-system.ini
+++ b/templates/jetty/start.d/idp-system.ini
@@ -11,7 +11,7 @@ jetty.ssl.port=443
 jetty.http.port=80
 jetty.http.host=localhost
 
-logback.version={{ download.logback-core.version }}
+logback.version={{ download.logback_core.version }}
 slf4j.version={{ download.jcl_over_slf4j.version }}
 
 ## Route request logging through standard logging API
