--- a/tasks/jetty.yml
+++ b/tasks/jetty.yml
@@ -61,11 +61,11 @@
     - '{{ jetty.base }}/modules'
     - '{{ jetty.base }}/resources'
     - '{{ jetty.base }}/start.d'
-#    - '{{ jetty.base }}/static'
+    - '{{ jetty.base }}/static'
+    - '{{ jetty.base }}/static/WEB-INF'
     - '{{ jetty.base }}/tmp'
     - '{{ jetty.base }}/webapps'
 #    - '{{ jetty.base }}/webapps/root'
-#    - '{{ jetty.base }}/webapps/root/WEB-INF'
 
 # Files in jetty.base/etc
 
@@ -206,34 +206,32 @@
     mode: 0640
     backup: yes
 
-- name: 'Stop now'
-  meta: end_play
-
+### No needed
 # Files in jetty.base
+#
+#- name: 'Set start.ini'
+#  template:
+#    dest: '{{ jetty.base }}/start.ini'
+#    src: 'templates/jetty/start.ini'
+#    owner: root
+#    group: jetty
+#    mode: 0640
+#    backup: yes
 
-- name: 'Set start.ini'
-  template:
-    dest: '{{ jetty.base }}/start.ini'
-    src: 'templates/jetty/start.ini'
-    owner: root
-    group: jetty
-    mode: 0640
-    backup: yes
-
-# Files in jetty.base/webapps/root
+# Files in jetty.base/static
 
 - name: 'Set 404'
   template:
-    dest: '{{ jetty.base }}/webapps/root/404'
-    src: 'templates/jetty/404'
+    dest: '{{ jetty.base }}/static/404'
+    src: 'templates/jetty/static/404'
     owner: root
     group: jetty
     mode: 0640
 
 - name: 'Set index.html'
   template:
-    dest: '{{ jetty.base }}/webapps/root/index.html'
-    src: 'templates/jetty/index.html'
+    dest: '{{ jetty.base }}/static/index.html'
+    src: 'templates/jetty/static/index.html'
     owner: root
     group: jetty
     mode: 0640
@@ -241,7 +239,7 @@
 - name: 'Add favicon.ico to site'
   copy:
     src: 'assets/{{ inventory_hostname }}/jetty/root/favicon.ico'
-    dest: '{{ jetty.base }}/webapps/root/favicon.ico'
+    dest: '{{ jetty.base }}/static/favicon.ico'
     owner: jetty
     group: jetty
     mode: 0640
@@ -249,26 +247,29 @@
 - name: 'Add favicon-mobile.ico to site'
   copy:
     src: 'assets/{{ inventory_hostname }}/jetty/root/favicon-mobile.ico'
-    dest: '{{ jetty.base }}/webapps/root/favicon-mobile.ico'
+    dest: '{{ jetty.base }}/static/favicon-mobile.ico'
     owner: jetty
     group: jetty
     mode: 0640
 
 - name: 'Add robots.txt to site'
   copy:
-    src: 'templates/jetty/robots.txt'
-    dest: '{{ jetty.base }}/webapps/root/robots.txt'
+    src: 'templates/jetty/static/robots.txt'
+    dest: '{{ jetty.base }}/static/robots.txt'
     owner: jetty
     group: jetty
     mode: 0640
 
 - name: 'Set web.xml'
   template:
-    dest: '{{ jetty.base }}/webapps/root/WEB-INF/web.xml'
-    src: 'templates/jetty/web.xml'
+    dest: '{{ jetty.base }}/static/WEB-INF/web.xml'
+    src: 'templates/jetty/static/WEB-INF/web.xml'
     owner: root
     group: jetty
     mode: 0640
+
+- name: 'Stop now'
+  meta: end_play
 
 # Jetty default in /etc/default
 
