--- a/templates/jetty/start.d/idp.ini
+++ b/templates/jetty/start.d/idp.ini
@@ -6,8 +6,8 @@
 #     "idp.backchannel.*" refers to the TLS connection on the SOAP port (8443)
 #     "jetty.sslContext.*" refers to the TLS connection on 443
 
-jetty.sslContext.keyStorePath=/credentials/idp-userfacing.p12
-jetty.sslContext.trustStorePath=/credentials/idp-userfacing.p12
+jetty.sslContext.keyStorePath={{ jetty.base }}credentials/idp-userfacing.p12
+jetty.sslContext.trustStorePath={{ jetty.base }}credentials/idp-userfacing.p12
 
 
 # Keystore types
