Jetty done, moving onto the Database setup

--- a/tasks/db.yml
+++ b/tasks/db.yml
@@ -95,3 +95,6 @@
 - name: 'Import Shibboleth IdP StorageRecords schema'
   mysql_db: 'state=import name={{ db.name }} target={{ installer.path }}/tb_storage_records_ddl.sql'
 
+- name: 'Stop now'
+  meta: end_play
+
