--- a/templates/idp/install.properties
+++ b/templates/idp/install.properties
@@ -1,2 +1,5 @@
-idp.entityID={{ idp_entity_id }}
-idp.initial.modules=idp.authn.Password,idp.intercept.Consent,idp.admin.Hello
+idp.target.dir = {{ shib_idp.home }}
+idp.entityID = {{ idp_entity_id }}
+idp.host.name = {{ idp_host_name }}
+idp.scope = {{ idp_attribute_scope }}
+idp.initial.modules = idp.authn.Password,idp.intercept.Consent,idp.admin.Hello
