--- a/tasks/idp.yml
+++ b/tasks/idp.yml
@@ -51,7 +51,7 @@
 - name: 'Run IdP install'
   shell: |
     umask 0022
-    {{ shib_idp.src_root }}/bin/install.sh --propertyFile '{{ shib_idp.src_root }}/install-{{ download.shib_idp.version }}.properties'
+    {{ shib_idp.src }}/bin/install.sh --propertyFile '{{ shib_idp.src_root }}/install-{{ download.shib_idp.version }}.properties'
   args:
     creates: '{{ shib_idp.home }}'
 
