--- a/site_v5.yml
+++ b/site_v5.yml
@@ -93,9 +93,9 @@
         url: "{{ download.jcl_over_slf4j.baseurl }}/jcl-over-slf4j-{{ download.jcl_over_slf4j.version }}.jar"
       plugins:
         nashorn:
-          url: "{{ download.plugins.baseurl }}/{{ download.plugins.nashorn.name }}/truststore.asc.{{ download.plugin.nashorn.version }}"
+          url: "{{ download.plugins.baseurl }}/{{ download.plugins.nashorn.name }}/truststore.asc.{{ download.plugins.nashorn.version }}"
         storage_jdbc:
-          url: "{{ download.plugins.baseurl }}/{{ download.plugins.storage_jdbc.name }}/truststore.asc.{{ download.plugin.storage_jdbc.version }}"
+          url: "{{ download.plugins.baseurl }}/{{ download.plugins.storage_jdbc.name }}/truststore.asc.{{ download.plugins.storage_jdbc.version }}"
 
     installer:
       root: "{{ install_base }}/shibboleth-idp5-installer"
