Updated Shib config files to V5

--- a/assets/idp.example.edu.dist/idp/conf/idp.properties
+++ b/assets/idp.example.edu.dist/idp/conf/idp.properties
@@ -1,9 +1,13 @@
+# Set false if you do not want the IdP to check (asynchronously) whether
+# it can be updated or not when the container starts
+#idp.updateCheck.enable=true
+
 # Auto-load all files matching conf/**/*.properties
 # Disable if you want to manually maintain a list of sources.
-idp.searchForProperties = true
+idp.searchForProperties=true
 
 # Load any "outside-tree" property sources from a comma-delimited list
-idp.additionalProperties = /credentials/secrets.properties
+idp.additionalProperties=/credentials/secrets.properties
 
 # In most cases (and unless noted in the surrounding comments) the
 # commented settings in the distributed files document default behavior.
@@ -26,23 +30,31 @@ idp.scope={{ idp_attribute_scope }}
 #idp.cookie.secure = true
 #idp.cookie.httpOnly = true
 #idp.cookie.domain =
-#idp.cookie.path =
+# Note the path is now / to allow defaulting to __Host- prefixed names.
+#idp.cookie.path = /
 #idp.cookie.maxAge = 31536000
 # These control operation of the SameSite filter, which is off by default.
 #idp.cookie.sameSite = None
 #idp.cookie.sameSiteCondition = shibboleth.Conditions.FALSE
 
 # Enable cross-site request forgery mitigation for views. 
-idp.csrf.enabled = true
+idp.csrf.enabled=true
 # Name of the HTTP parameter that stores the CSRF token.
 #idp.csrf.token.parameter = csrf_token
 
 # HSTS/CSP response headers
-#idp.hsts = max-age=0
+#idp.hsts = max-age=31536000
 # X-Frame-Options value, set to DENY or SAMEORIGIN to block framing
 #idp.frameoptions = DENY
 # Content-Security-Policy value, set to match X-Frame-Options default
 #idp.csp = frame-ancestors 'none';
+
+# Set to false to disable filter that forcibly applies UTF-8 encoding
+#idp.encoding.forceUTF8 = true
+
+# Enable and control MDC filter
+#idp.logging.MDC.enabled = true
+#idp.logging.MDC.createSession = true
 
 # Set the location of user-supplied web flow definitions
 #idp.webflows = %{idp.home}/flows
@@ -58,16 +70,16 @@ idp.csrf.enabled = true
 #idp.sealer.storeType = JCEKS
 #idp.sealer.updateInterval = PT15M
 #idp.sealer.aliasBase = secret
-idp.sealer.storeResource = %{idp.home}/credentials/sealer.jks
-idp.sealer.versionResource = %{idp.home}/credentials/sealer.kver
+idp.sealer.storeResource=%{idp.home}/credentials/sealer.jks
+idp.sealer.versionResource=%{idp.home}/credentials/sealer.kver
 
-# Settings for public/private signing and encryption key(s)
-# During decryption key rollover, point the ".2" properties at a second
-# keypair, uncomment in credentials.xml, then publish it in your metadata.
-idp.signing.key = %{idp.home}/credentials/idp-signing.key
-idp.signing.cert = %{idp.home}/credentials/idp-signing.crt
-idp.encryption.key = %{idp.home}/credentials/idp-encryption.key
-idp.encryption.cert = %{idp.home}/credentials/idp-encryption.crt
+# Settings for public/private signing and encryption key(s):
+#  During decryption key rollover, point the ".2" properties at a second
+#  keypair, uncomment in credentials.xml, then publish it in your metadata.
+idp.signing.key=%{idp.home}/credentials/idp-signing.key
+idp.signing.cert=%{idp.home}/credentials/idp-signing.crt
+idp.encryption.key=%{idp.home}/credentials/idp-encryption.key
+idp.encryption.cert=%{idp.home}/credentials/idp-encryption.crt
 #idp.encryption.key.2 = %{idp.home}/credentials/idp-encryption-old.key
 #idp.encryption.cert.2 = %{idp.home}/credentials/idp-encryption-old.crt
 
@@ -78,8 +90,8 @@ idp.encryption.cert = %{idp.home}/credentials/idp-encryption.crt
 #idp.signing.config = shibboleth.SigningConfiguration.SHA256
 
 # The new install default for encryption is now AES-GCM.
-#idp.encryption.config = shibboleth.EncryptionConfiguration.GCM
-idp.encryption.config = shibboleth.EncryptionConfiguration.{{ default_encryption }}
+#idp.encryption.config=shibboleth.EncryptionConfiguration.GCM
+idp.encryption.config=shibboleth.EncryptionConfiguration.{{ default_encryption }}
 
 # Sets the default strategy for key agreement key wrap usage for credentials from metadata,
 # if not otherwise configured on the security configuration
@@ -87,10 +99,10 @@ idp.encryption.config = shibboleth.EncryptionConfiguration.{{ default_encryption
 
 # Configures trust evaluation of keys used by services at runtime
 # Internal default is Chaining, overriden for new installs
-idp.trust.signatures = shibboleth.ExplicitKeySignatureTrustEngine
+idp.trust.signatures=shibboleth.ExplicitKeySignatureTrustEngine
 # Other options:
 #   shibboleth.ChainingSignatureTrustEngine, shibboleth.PKIXSignatureTrustEngine
-idp.trust.certificates = shibboleth.ExplicitKeyX509TrustEngine
+idp.trust.certificates=shibboleth.ExplicitKeyX509TrustEngine
 # Other options:
 #   shibboleth.ChainingX509TrustEngine, shibboleth.PKIXX509TrustEngine
 
@@ -100,7 +112,7 @@ idp.trust.certificates = shibboleth.ExplicitKeyX509TrustEngine
 
 # Configuration of client- and server-side storage plugins
 #idp.storage.cleanupInterval = PT10M
-idp.storage.htmlLocalStorage = true
+idp.storage.htmlLocalStorage=true
 #idp.storage.clientSessionStorageName = shib_idp_session_ss
 #idp.storage.clientPersistentStorageName = shib_idp_persistent_ss
 
@@ -118,12 +130,15 @@ idp.storage.htmlLocalStorage = true
 # Set to false to disable the IdP session layer
 #idp.session.enabled = true
 
+# Set to true to rely on persistent cookies for session management
+#idp.session.persistent = false
+
 # Set to "shibboleth.StorageService" for server-side storage of user sessions
 #idp.session.StorageService = shibboleth.ClientSessionStorageService
 idp.session.StorageService = shibboleth.StorageService
 
 # Name of cookie used for session
-#idp.session.cookieName = shib_idp_session
+#idp.session.cookieName = __Host-shib_idp_session
 # Size of session IDs
 #idp.session.idSize = 32
 # Bind sessions to IP addresses
@@ -135,9 +150,9 @@ idp.session.StorageService = shibboleth.StorageService
 # Tolerate storage-related errors
 #idp.session.maskStorageFailure = false
 # Track information about SPs logged into
-idp.session.trackSPSessions = true
+idp.session.trackSPSessions=true
 # Support lookup by SP for SAML logout
-idp.session.secondaryServiceIndex = true
+idp.session.secondaryServiceIndex=true
 # Length of time to track SP sessions
 #idp.session.defaultSPlifetime = PT2H
 
@@ -185,7 +200,7 @@ idp.consent.compareValues = true
 #idp.impersonate.specificPolicy = SpecificImpersonationPolicy
 
 # Picks outbound bindings more sensibly than based on metadata order
-idp.bindings.inMetadataOrder = false
+idp.bindings.inMetadataOrder=false
 
 # Whether to lookup metadata, etc. for every SP involved in a logout
 # for use by user interface logic; adds overhead so off by default.
@@ -246,4 +261,4 @@ idp.ui.fallbackLanguages=en,fr,de
 #idp.fticks.logport = 514
 
 # Set false if you want SAML bindings "spelled out" in audit log
-idp.audit.shortenBindings = true
+idp.audit.shortenBindings=true
