--- a/assets/idp.example.edu.dist/idp/conf/ldap.properties
+++ b/assets/idp.example.edu.dist/idp/conf/ldap.properties
@@ -2,14 +2,16 @@
 # Note, this doesn't apply to the use of JAAS authentication via LDAP
 
 ## Authenticator strategy, either anonSearchAuthenticator, bindSearchAuthenticator, directAuthenticator, adAuthenticator
-idp.authn.LDAP.authenticator                   = bindSearchAuthenticator
+idp.authn.LDAP.authenticator                    = bindSearchAuthenticator
 
 ## Connection properties ##
 idp.authn.LDAP.ldapURL                          = ldap://localhost:10389
 idp.authn.LDAP.useStartTLS                      = false
-# Time in milliseconds that connects will block
+# Time to wait for startTLS responses
+#idp.authn.LDAP.startTLSTimeout                 = PT3S
+# Time to wait for connections to open
 #idp.authn.LDAP.connectTimeout                  = PT3S
-# Time in milliseconds to wait for responses
+# Time to wait for operation responses (e.g. search, bind)
 #idp.authn.LDAP.responseTimeout                 = PT3S
 # Connection strategy to use when multiple URLs are supplied, either ACTIVE_PASSIVE, ROUND_ROBIN, RANDOM
 #idp.authn.LDAP.connectionStrategy               = ACTIVE_PASSIVE
@@ -51,6 +53,7 @@ idp.attribute.resolver.LDAP.connectionStrategy  = %{idp.authn.LDAP.connectionStr
 idp.attribute.resolver.LDAP.baseDN              = %{idp.authn.LDAP.baseDN:undefined}
 idp.attribute.resolver.LDAP.bindDN              = %{idp.authn.LDAP.bindDN:undefined}
 idp.attribute.resolver.LDAP.useStartTLS         = %{idp.authn.LDAP.useStartTLS:true}
+idp.attribute.resolver.LDAP.startTLSTimeout     = %{idp.authn.LDAP.startTLSTimeout:PT3S}
 idp.attribute.resolver.LDAP.trustCertificates   = %{idp.authn.LDAP.trustCertificates:undefined}
 idp.attribute.resolver.LDAP.searchFilter        = (uid=$resolutionContext.principal)
 
