--- a/tasks/jetty.yml
+++ b/tasks/jetty.yml
@@ -146,7 +146,7 @@
 
 - name: 'Set start.ini configuration'
   template:
-    dest: '(( jetty.base }}/start.d/start.ini
+    dest: '(( jetty.base }}/start.d/start.ini'
     src: 'templates/jetty/start.d/start.ini'
     owner: root
     group: jetty
