completed review of IdP configs

--- a/assets/idp.example.edu.dist/idp/conf/authn/authn.properties
+++ b/assets/idp.example.edu.dist/idp/conf/authn/authn.properties
@@ -109,7 +109,14 @@ idp.authn.External.externalAuthnPath = contextRelative:external.jsp
 # Unset in most cases only if using the authnMethodHeader or
 # subjectAttribute settings
 #idp.authn.RemoteUser.addDefaultPrincipals = true
-# Most other settings need to be supplied via web.xml to the servlet
+#idp.authn.RemoteUser.checkRemoteUser = true
+# Comma-delimited lists of attributes or headers to pull from
+#idp.authn.RemoteUser.checkAttributes = 
+#idp.authn.RemoteUser.checkHeaders = 
+# Advanced settings
+#idp.authn.RemoteUser.subjectAttribute =
+#idp.authn.RemoteUser.authnMethodHeader =
+#idp.authn.RemoteUser.authnAuthorityHeader =
 
 #### RemoteUserInternal ####
 
@@ -144,6 +151,7 @@ idp.authn.SPNEGO.supportedPrincipals = \
 
 #idp.authn.X509.order = 1000
 #idp.authn.X509.nonBrowserSupported = false
+#idp.authn.X509.saveCertificateToCredentialSet = true
 # Servlet context-relative path to wherever your implementation lives
 #idp.authn.X509.externalAuthnPath = contextRelative:x509-prompt.jsp
 idp.authn.X509.supportedPrincipals = \
@@ -177,24 +185,6 @@ idp.authn.IPAddress.supportedPrincipals = \
 # Unset if you plan to return full Java Subject from function
 #idp.authn.Function.addDefaultPrincipals = true
 
-#### Duo ####
-
-#idp.authn.Duo.order = 1000
-#idp.authn.Duo.nonBrowserSupported = false
-#idp.authn.Duo.forcedAuthenticationSupported = true
-# Unset if you have advanced Duo integrations with individualized Principals
-#idp.authn.Duo.addDefaultPrincipals = true
-# The list below should be changed to reflect whatever locally- or
-# community-defined values are appropriate to represent Duo. It is
-# strongly advised that the value not be specific to Duo or any
-# particular technology to avoid lock-in.
-idp.authn.Duo.supportedPrincipals = \
-    saml2/http://example.org/ac/classes/mfa, \
-    saml1/http://example.org/ac/classes/mfa
-# Default Duo integration settings are defined separately
-# in duo.properties due to the sensitivity of the secret key.
-
-
 #### SAML ####
 
 #idp.authn.SAML.order = 1000
@@ -223,6 +213,8 @@ idp.authn.Duo.supportedPrincipals = \
 #idp.authn.MFA.passiveAuthenticationSupported = true
 #idp.authn.MFA.forcedAuthenticationSupported = true
 #idp.authn.MFA.validateLoginTransitions = true
+# Defaults to set AuthnInstant based on oldest component result
+#idp.authn.MFA.useLatestTimestamp = false
 # The list below almost certainly requires changes, and should generally be the
 # union of any of the separate factors you combine in your particular MFA flow
 # rules. The example corresponds to the example in mfa-authn-config.xml that
