--- a/templates/idp/install.properties
+++ b/templates/idp/install.properties
@@ -3,3 +3,4 @@ idp.entityID = {{ idp_entity_id }}
 idp.host.name = {{ idp_host_name }}
 idp.scope = {{ idp_attribute_scope }}
 idp.initial.modules = idp.authn.Password,idp.intercept.Consent,idp.admin.Hello
+idp.sealer.password={{ shib_idp.cookie_enc_key_password }}
