Added new options to support REFEDS Policies

--- a/bootstrap-v5.ini
+++ b/bootstrap-v5.ini
@@ -117,6 +117,57 @@
 #
 #LDAP_USER_FILTER_ATTRIBUTE="uid"
 
+[policy]
+#
+# REFEDS and other policy related settings
+#
+# This IdP conforms to the REFEDS Baseline Expectations v1 for Identity Providers
+# Ref: https://refeds.org/baseline-expectations
+#
+REFEDS_BASELINE_IDP_V1="false"
+
+# This IdP conforms to the REFEDS Assurance Frame V2.
+# To conform to this framework, the IdP must also conform to the REFEDS Baseline
+# Expectations v1 (see above).
+# Ref: https://refeds.org/assurance
+#
+REFEDS_ASSURANCE_V2="true"
+
+# REFEDS RAF Identifier Unquie
+REFEDS_RAF_UNIQUE="true"
+
+# REFEDS RAF Uniqueness of eduPersonPrincipalName. "no-reassign" or "reassign-1y"
+REFEDS_RAF_EPPN_UNIQUE="no-reassign"
+
+# REFEDS RAF Freshness. "1d" or "1m"
+REFEDS_RAF_EPA="1d"
+
+# This IdP conforms to the REFEDS Research and Scholarship (R&S) v1.3
+# Ref: http://refeds.org/category/research-and-scholarship
+#
+REFEDS_R_AND_S_V1_3="false"
+
+# This IdP conforms to the REFEDS Anonymous Access v.2
+# Ref: https://refeds.org/category/anonymous
+#
+REFEDS_ANONYMOUS_V2="false"
+
+# This IdP conforms to the REFEDS Pseudonymous Access v.2
+# Ref: https://refeds.org/category/pseudonymous
+#
+REFEDS_PSEUDONYMOUS_V2="false"
+
+# This IdP conforms to the REFEDS Personalized Access v.2
+# Ref: https://refeds.org/category/personalized
+#
+REFEDS_PERSONALIZED_V2="false"
+
+# This IdP conforms to the REFEDS Code of Conduct v.2
+# Ref: https://refeds.org/category/code-of-conduct/v2
+#
+REFEDS_CODE-OF-CONDUCT_V2="false"
+
+
 [advanced]
 #                            ADVANCED SECTION
 #                            ~~~~~~~~~~~~~~~~
