Fix types in policy names, add missing Java Type to resolver and update Java Path in branding

--- a/bootstrap-v5.ini
+++ b/bootstrap-v5.ini
@@ -131,10 +131,10 @@ REFEDS_BASELINE_IDP_V1="false"
 # Expectations v1 (see above).
 # Ref: https://refeds.org/assurance
 #
-REFEDS_ASSURANCE_V2="true"
+REFEDS_ASSURANCE_V2="false"
 
 # REFEDS RAF Identifier Unquie
-REFEDS_RAF_UNIQUE="true"
+REFEDS_RAF_UNIQUE="false"
 
 # REFEDS RAF Uniqueness of eduPersonPrincipalName. "no-reassign" or "reassign-1y"
 REFEDS_RAF_EPPN_UNIQUE="no-reassign"
